--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@tanstack/react-router": "^1.131.44",
     "@tanstack/react-router-devtools": "^1.131.44",
     "electron-updater": "^6.3.9",
-    "sass": "^1.92.1"
+    "sass": "^1.92.1",
+    "steam-totp": "^2.1.2",
+    "steamcommunity": "^3.49.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
