--- a/package.json
+++ b/package.json
@@ -30,9 +30,13 @@
     "@mui/material": "^7.3.2",
     "@tanstack/react-router": "^1.131.44",
     "@tanstack/react-router-devtools": "^1.131.44",
+    "assert-plus": "^1.0.0",
     "electron-updater": "^6.3.9",
+    "react-toastify": "^11.0.5",
     "sass": "^1.92.1",
     "steam-totp": "^2.1.2",
+    "steam-tradeoffer-manager": "^2.12.2",
+    "steam-user": "^5.2.3",
     "steamcommunity": "^3.49.0"
   },
   "devDependencies": {
