feat: programm settings, notify from backend, refactor file util

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@tanstack/react-router": "^1.131.44",
     "@tanstack/react-router-devtools": "^1.131.44",
     "assert-plus": "^1.0.0",
+    "electron-store": "^11.0.0",
     "electron-updater": "^6.3.9",
+    "react-hook-form": "^7.63.0",
     "react-toastify": "^11.0.5",
     "sass": "^1.92.1",
     "steam-totp": "^2.1.2",
