--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "steam-totp": "^2.1.2",
     "steam-tradeoffer-manager": "^2.12.2",
     "steam-user": "^5.2.3",
-    "steamcommunity": "^3.49.0"
+    "steamcommunity": "^3.49.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
